--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dat Quiz Doe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="./javascript.js"></script>
+    <h1>The Hardest quiz ever!</h1>
+    <h2></h2>
+    <button id="start">Start Quiz!</button>
+        <script src="./javascript.js"></script>
 </body>
 </html>
