--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dat Quiz Doe</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <h1>The Hardest quiz ever!</h1>
-    <h2></h2>
-    <button id="start">Start Quiz!</button>
-        <script src="./javascript.js"></script>
+    <div id="summary">
+                <h1>The Hardest quiz ever!</h1>
+    </div>
+
+    <button id="startbutton" class="addbutton">Start Quiz!</button>
+
+    <script src="./javascript.js"></script>
 </body>
+
 </html>
