changes i apparently never commited

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <div id="summary">
-                <h1>The Hardest quiz ever!</h1>
-    </div>
+    <div id="summary"></div>
 
     <button id="startbutton" class="addbutton">Start Quiz!</button>
 
